name:
  dmenu
version:
  0.1.0.0
synopsis:
  Complete bindings to the dmenu and dmenu2 command line tools.
description:
  Provides fuzzy selection via a GUI menu.
homepage:
  https://github.com/m0rphism/haskell-dmenu
license:
  BSD3
license-file:
  LICENSE
author:
  Hannes Saffrich
maintainer:
  m0rphism@zankapfel.org
copyright:
  2016 Hannes Saffrich
category:
  System
build-type:
  Simple
cabal-version:
  >=1.10
extra-doc-files:
  doc/*.png

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    mtl,
    transformers,
    process,
    directory
  ghc-options:
    -Wall -O2
  exposed-modules:
    DMenu
  other-modules:
    DMenu.Color
    DMenu.Options
    DMenu.Run

